--- a/index.html
+++ b/index.html
@@ -6,25 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Archive</title>
 
-    <!-- Bootstrap Css  -->
+    <!-------------------------------------------------
+                          Bootstrap Css
+      ----------------------------------------------->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <!-----------------------------------------------
+                        Inner Css 
+  ------------------------------------------------->
     <style>
       .display-img {
         height: 350px;
       }
+
       .card {
         height: 550px;
       }
+
+      #spinner {
+        display: none;
+      }
     </style>
   </head>
+
   <body class="bg-light">
-    <h1 class="text-center m-2 text-success">Welcome to Book Cave</h1>
-    <h3 class="text-center m-2 text-secondary">Search Your Book</h3>
+    <!-- ------------------------Headline Title------------------------ -->
+
+    <h1 class="text-center m-2 text-success">
+      Welcome to Book<span class="text-info">Archive</span>
+    </h1>
+    <h3 class="text-center m-2 text-secondary">Search Your Favourite Book</h3>
+
+    <!--------------------------------- Input Box ---------------------------------- -->
 
     <div class="input-group mb-3 w-50 mx-auto">
       <input
@@ -44,15 +61,21 @@
         Button
       </button>
     </div>
+    <!------------------------------------Spinner------------------------------ -->
 
-    <!-- Error handling notify  -->
+    <div id="spinner" class="text-center">
+      <div class="spinner-border text-secondary" role="status"></div>
+      <h5 class="">Loading...</h5>
+    </div>
+
+    <!-- ----------------------------Error handling notify---------------------  -->
     <div id="error-handle"></div>
-    <!-- Total number of result  -->
+    <!-- ---------------------------Total number of result-----------------------  -->
     <div id="total-result" class="text-center text-secondary mb-3"></div>
-    <!-- ---------------------Show Result-------------------- -->
+    <!-- -----------------------------------Show Result--------------------------- -->
     <div id="book-container" class="row row-cols-1 p-5 row-cols-md-3 g-4"></div>
 
-    <!-- External Js  -->
+    <!--------------------------- External Js Link --------------------------------->
     <script src="js/script.js"></script>
   </body>
 </html>
